// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Albums checkUsersSavedAlbums 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/albums/contains",
    },
  ],
]
`;

exports[`Albums getAlbum 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "albums/id1",
    },
  ],
]
`;

exports[`Albums getAlbumTracks 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "albums/id1/tracks",
    },
  ],
]
`;

exports[`Albums getNewAlbumReleases 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "UA",
        "limit": 1,
        "offset": 1,
      },
      "url": "browse/new-releases",
    },
  ],
]
`;

exports[`Albums getSeveralAlbums 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "albums",
    },
  ],
]
`;

exports[`Albums getUsersSavedAlbums 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "me/albums",
    },
  ],
]
`;

exports[`Albums removeUsersSavedAlbums 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/albums",
    },
  ],
]
`;

exports[`Albums saveAlbumsForUser 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/albums",
    },
  ],
]
`;

exports[`Artists getArtist 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "artists/id1",
    },
  ],
]
`;

exports[`Artists getArtistsAlbums 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "include_groups": "album,appears_on,compilation",
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "artists/id1/albums",
    },
  ],
]
`;

exports[`Artists getArtistsRelatedArtists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "artists/id1/related-artists",
    },
  ],
]
`;

exports[`Artists getArtistsTopTracks 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "artists/id1/top-tracks",
    },
  ],
]
`;

exports[`Artists getSeveralArtists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "artists",
    },
  ],
]
`;

exports[`Categories getCategory 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "CH",
        "locale": "de_DE",
      },
      "url": "browse/categories/id1",
    },
  ],
]
`;

exports[`Categories getSeveralCategories 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "CH",
        "limit": 1,
        "locale": "de_DE",
        "offset": 1,
      },
      "url": "browse/categories",
    },
  ],
]
`;

exports[`Episodes checkUsersSavedEpisodes 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/episodes/contains",
    },
  ],
]
`;

exports[`Episodes getEpisode 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "episodes/id1",
    },
  ],
]
`;

exports[`Episodes getSeveralEpisodes 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "episodes",
    },
  ],
]
`;

exports[`Episodes getUsersSavedEpisodes 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "me/episodes",
    },
  ],
]
`;

exports[`Episodes removeUsersSavedEpisodes 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/episodes",
    },
  ],
]
`;

exports[`Episodes saveEpisodesForUser 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/episodes",
    },
  ],
]
`;

exports[`Genres getAvailableGenreSeeds 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "recommendations/available-genre-seeds",
    },
  ],
]
`;

exports[`Markets getAvailableMarkets 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "markets",
    },
  ],
]
`;

exports[`Player getAvailableDevices 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "me/player/devices",
    },
  ],
]
`;

exports[`Player getPlaybackState 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "additional_types": "track,episode",
        "market": "CH",
      },
      "url": "me/player",
    },
  ],
]
`;

exports[`Player startOrResumePlayback 1`] = `
[
  [
    {
      "data": {
        "context_uri": "",
        "offset": {},
        "position_ms": 1,
        "uris": [
          "",
        ],
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "device_id": "abc",
      },
      "url": "me/player/play",
    },
  ],
]
`;

exports[`Player transferPlayback 1`] = `
[
  [
    {
      "data": {
        "device_ids": [
          "id1",
        ],
        "play": true,
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "me/player",
    },
  ],
]
`;

exports[`Playlists addPlaylistItems 1`] = `
[
  [
    {
      "data": {
        "position": 0,
        "uris": [
          "spotify:track:1",
          "spotify:episode:2",
        ],
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "POST",
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Playlists changePlaylist 1`] = `
[
  [
    {
      "data": {
        "collaborative": true,
        "description": "new description",
        "name": "new playlist",
        "public": false,
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "playlists/id1",
    },
  ],
]
`;

exports[`Playlists createPlaylist 1`] = `
[
  [
    {
      "data": {
        "collaborative": true,
        "description": "new description",
        "name": "playlist",
        "public": false,
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "POST",
      "url": "users/id1/playlists",
    },
  ],
]
`;

exports[`Playlists getCategoryPlaylists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "UA",
        "limit": 1,
        "offset": 1,
      },
      "url": "browse/categories/id1/playlists",
    },
  ],
]
`;

exports[`Playlists getCurrentUsersPlaylists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "offset": 1,
      },
      "url": "me/playlists",
    },
  ],
]
`;

exports[`Playlists getFeaturedPlaylists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "country": "UA",
        "limit": 1,
        "locale": "sv_SE",
        "offset": 1,
        "timestamp": "2014-10-23T09:00:00",
      },
      "url": "browse/featured-playlists",
    },
  ],
]
`;

exports[`Playlists getPlaylist 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "additional_types": "track,episode",
        "fields": "total,limit",
        "market": "CH",
      },
      "url": "playlists/id1",
    },
  ],
]
`;

exports[`Playlists getPlaylistCoverImage 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "playlists/id1/images",
    },
  ],
]
`;

exports[`Playlists getPlaylistItems 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "additional_types": "track,episode",
        "fields": "total,limit",
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Playlists getUsersPlaylists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "offset": 1,
      },
      "url": "users/id1/playlists",
    },
  ],
]
`;

exports[`Playlists removePlaylistItems 1`] = `
[
  [
    {
      "data": {
        "snapshot_id": "id1",
        "tracks": [
          {
            "uri": "spt:track:1",
          },
        ],
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Playlists reorderPlaylistItems 1`] = `
[
  [
    {
      "data": {
        "insert_before": 1,
        "range_length": 1,
        "range_start": 1,
        "snapshot_id": "snapshot_id",
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "playlists/id1/tracks",
    },
  ],
]
`;

exports[`Search Search.get 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "q": "x",
        "type": "track,album,artist,episode",
      },
      "url": "search",
    },
  ],
]
`;

exports[`Shows checkUsersSavedShows 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/shows/contains",
    },
  ],
]
`;

exports[`Shows getSeveralShows 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "shows",
    },
  ],
]
`;

exports[`Shows getShow 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "shows/id1",
    },
  ],
]
`;

exports[`Shows getShowEpisodes 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "shows/id1/episodes",
    },
  ],
]
`;

exports[`Shows getUsersSavedShows 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "offset": 1,
      },
      "url": "me/shows",
    },
  ],
]
`;

exports[`Shows removeUsersSavedShows 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "me/shows",
    },
  ],
]
`;

exports[`Shows saveShowsForUser 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/shows",
    },
  ],
]
`;

exports[`Tracks checkUsersSavedTracks 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/tracks/contains",
    },
  ],
]
`;

exports[`Tracks getAudioAnalysis 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "audio-analysis/id1",
    },
  ],
]
`;

exports[`Tracks getAudioFeatures 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "audio-features/id1",
    },
  ],
]
`;

exports[`Tracks getRecommendations 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "seed_artists": "id1,id1",
        "seed_genres": "id1",
        "seed_tracks": "id1",
      },
      "url": "recommendations",
    },
  ],
]
`;

exports[`Tracks getSeveralAudioFeatures 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "audio-features",
    },
  ],
]
`;

exports[`Tracks getSeveralTracks 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "market": "CH",
      },
      "url": "tracks",
    },
  ],
]
`;

exports[`Tracks getTrack 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "market": "CH",
      },
      "url": "tracks/id1",
    },
  ],
]
`;

exports[`Tracks getUsersSavedTracks 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "market": "CH",
        "offset": 1,
      },
      "url": "me/tracks",
    },
  ],
]
`;

exports[`Tracks removeUsersSavedTracks 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/tracks",
    },
  ],
]
`;

exports[`Tracks saveTracksForUser 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "me/tracks",
    },
  ],
]
`;

exports[`Users checkFollowsArtists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "artist",
      },
      "url": "me/following/contains",
    },
  ],
]
`;

exports[`Users checkFollowsUsers 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "user",
      },
      "url": "me/following/contains",
    },
  ],
]
`;

exports[`Users checkUsersFollowPlaylist 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
      },
      "url": "playlists/id1/followers/contains",
    },
  ],
]
`;

exports[`Users followArtists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "artist",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users followPlaylist 1`] = `
[
  [
    {
      "data": {
        "public": true,
      },
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "url": "playlists/id1/followers",
    },
  ],
]
`;

exports[`Users followUsers 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "PUT",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "user",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users getCurrentUsersProfile 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "me",
    },
  ],
]
`;

exports[`Users getUsersFollowedArtists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "after": "id1",
        "limit": 1,
        "type": "artist",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users getUsersProfile 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "url": "users/id1",
    },
  ],
]
`;

exports[`Users getUsersTopArtists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "offset": 1,
        "time_range": "long_term ",
      },
      "url": "me/top/artists",
    },
  ],
]
`;

exports[`Users getUsersTopTracks 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "GET",
      "params": {
        "limit": 1,
        "offset": 1,
        "time_range": "long_term ",
      },
      "url": "me/top/tracks",
    },
  ],
]
`;

exports[`Users unfollowArtists 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "artist",
      },
      "url": "me/following",
    },
  ],
]
`;

exports[`Users unfollowPlaylist 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "url": "playlists/id1/followers",
    },
  ],
]
`;

exports[`Users unfollowUsers 1`] = `
[
  [
    {
      "headers": {
        "Authorization": "Bearer token-xyz",
      },
      "method": "DELETE",
      "params": {
        "ids": "id1,id2,id3,id4,id5,id6,id7,id8,id9,id10,id11,id12,id13,id14,id15,id16,id17,id18,id19,id20,id21,id22,id23,id24,id25,id26,id27,id28,id29,id30,id31,id32,id33,id34,id35,id36,id37,id38,id39,id40,id41,id42,id43,id44,id45,id46,id47,id48,id49,id50,id51",
        "type": "user",
      },
      "url": "me/following",
    },
  ],
]
`;
